tests/ui/type/verbose.normal.stderr
error[E0308]: mismatched types
  --> $DIR/verbose.rs:7:28
   |
LL |     let _: Foo<u32, i32> = Foo::<i32, i32> { x: 0, y: 0 };
   |            -------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Foo<u32, i32>`, found `Foo<i32, i32>`
   |            |
   |            expected due to this
   |
   = note: expected struct `Foo<u32, _>`
              found struct `Foo<i32, _>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
